--- a/Version2_transfer_learning_fine_tuning.ipynb
+++ b/Version2_transfer_learning_fine_tuning.ipynb
@@ -1392,6 +1392,226 @@
     "hela2_res = test_model(tuning_model, criterion, hela2_dataloader, device, tb_writer, \"hela2 test\")\n",
     "tb_writer.close()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### #6 80:10:10 Training:Validation:Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11733 3520 1509\n",
+      "Epoch [1/300], Train Loss: 0.0929, Validation Loss: 0.0760\n",
+      "Train Cosine Similarity: 0.9071, Train PCC: 0.8979\n",
+      "Validation Cosine Similarity: 0.9243, Validation PCC: 0.9171\n",
+      "Epoch [2/300], Train Loss: 0.0744, Validation Loss: 0.0728\n",
+      "Train Cosine Similarity: 0.9256, Train PCC: 0.9186\n",
+      "Validation Cosine Similarity: 0.9273, Validation PCC: 0.9205\n",
+      "Epoch [3/300], Train Loss: 0.0715, Validation Loss: 0.0715\n",
+      "Train Cosine Similarity: 0.9285, Train PCC: 0.9218\n",
+      "Validation Cosine Similarity: 0.9284, Validation PCC: 0.9217\n",
+      "Epoch [4/300], Train Loss: 0.0698, Validation Loss: 0.0710\n",
+      "Train Cosine Similarity: 0.9302, Train PCC: 0.9237\n",
+      "Validation Cosine Similarity: 0.9291, Validation PCC: 0.9224\n",
+      "Epoch [5/300], Train Loss: 0.0686, Validation Loss: 0.0708\n",
+      "Train Cosine Similarity: 0.9315, Train PCC: 0.9251\n",
+      "Validation Cosine Similarity: 0.9294, Validation PCC: 0.9228\n",
+      "Epoch [6/300], Train Loss: 0.0678, Validation Loss: 0.0709\n",
+      "Train Cosine Similarity: 0.9322, Train PCC: 0.9259\n",
+      "Validation Cosine Similarity: 0.9292, Validation PCC: 0.9225\n",
+      "Epoch [7/300], Train Loss: 0.0668, Validation Loss: 0.0702\n",
+      "Train Cosine Similarity: 0.9332, Train PCC: 0.9270\n",
+      "Validation Cosine Similarity: 0.9301, Validation PCC: 0.9236\n",
+      "Epoch [8/300], Train Loss: 0.0660, Validation Loss: 0.0694\n",
+      "Train Cosine Similarity: 0.9340, Train PCC: 0.9279\n",
+      "Validation Cosine Similarity: 0.9305, Validation PCC: 0.9240\n",
+      "Epoch [9/300], Train Loss: 0.0655, Validation Loss: 0.0703\n",
+      "Train Cosine Similarity: 0.9345, Train PCC: 0.9285\n",
+      "Validation Cosine Similarity: 0.9298, Validation PCC: 0.9232\n",
+      "Epoch [10/300], Train Loss: 0.0648, Validation Loss: 0.0704\n",
+      "Train Cosine Similarity: 0.9352, Train PCC: 0.9292\n",
+      "Validation Cosine Similarity: 0.9298, Validation PCC: 0.9234\n",
+      "Epoch [11/300], Train Loss: 0.0648, Validation Loss: 0.0690\n",
+      "Train Cosine Similarity: 0.9353, Train PCC: 0.9293\n",
+      "Validation Cosine Similarity: 0.9307, Validation PCC: 0.9242\n",
+      "Epoch [12/300], Train Loss: 0.0638, Validation Loss: 0.0690\n",
+      "Train Cosine Similarity: 0.9362, Train PCC: 0.9304\n",
+      "Validation Cosine Similarity: 0.9308, Validation PCC: 0.9243\n",
+      "Epoch [13/300], Train Loss: 0.0635, Validation Loss: 0.0689\n",
+      "Train Cosine Similarity: 0.9366, Train PCC: 0.9307\n",
+      "Validation Cosine Similarity: 0.9310, Validation PCC: 0.9246\n",
+      "Epoch [14/300], Train Loss: 0.0630, Validation Loss: 0.0698\n",
+      "Train Cosine Similarity: 0.9370, Train PCC: 0.9312\n",
+      "Validation Cosine Similarity: 0.9300, Validation PCC: 0.9236\n",
+      "Epoch [15/300], Train Loss: 0.0624, Validation Loss: 0.0700\n",
+      "Train Cosine Similarity: 0.9376, Train PCC: 0.9318\n",
+      "Validation Cosine Similarity: 0.9300, Validation PCC: 0.9236\n",
+      "Epoch [16/300], Train Loss: 0.0621, Validation Loss: 0.0694\n",
+      "Train Cosine Similarity: 0.9378, Train PCC: 0.9321\n",
+      "Validation Cosine Similarity: 0.9307, Validation PCC: 0.9243\n",
+      "Epoch [17/300], Train Loss: 0.0620, Validation Loss: 0.0689\n",
+      "Train Cosine Similarity: 0.9380, Train PCC: 0.9323\n",
+      "Validation Cosine Similarity: 0.9308, Validation PCC: 0.9244\n",
+      "Epoch [18/300], Train Loss: 0.0617, Validation Loss: 0.0697\n",
+      "Train Cosine Similarity: 0.9384, Train PCC: 0.9327\n",
+      "Validation Cosine Similarity: 0.9306, Validation PCC: 0.9242\n",
+      "Epoch [19/300], Train Loss: 0.0612, Validation Loss: 0.0717\n",
+      "Train Cosine Similarity: 0.9388, Train PCC: 0.9332\n",
+      "Validation Cosine Similarity: 0.9282, Validation PCC: 0.9215\n",
+      "Epoch [20/300], Train Loss: 0.0606, Validation Loss: 0.0703\n",
+      "Train Cosine Similarity: 0.9393, Train PCC: 0.9338\n",
+      "Validation Cosine Similarity: 0.9297, Validation PCC: 0.9232\n",
+      "Epoch [21/300], Train Loss: 0.0607, Validation Loss: 0.0706\n",
+      "Train Cosine Similarity: 0.9394, Train PCC: 0.9338\n",
+      "Validation Cosine Similarity: 0.9296, Validation PCC: 0.9230\n",
+      "Epoch [22/300], Train Loss: 0.0599, Validation Loss: 0.0704\n",
+      "Train Cosine Similarity: 0.9401, Train PCC: 0.9346\n",
+      "Validation Cosine Similarity: 0.9300, Validation PCC: 0.9235\n",
+      "Epoch [23/300], Train Loss: 0.0596, Validation Loss: 0.0703\n",
+      "Train Cosine Similarity: 0.9404, Train PCC: 0.9349\n",
+      "Validation Cosine Similarity: 0.9301, Validation PCC: 0.9236\n",
+      "Epoch [24/300], Train Loss: 0.0595, Validation Loss: 0.0700\n",
+      "Train Cosine Similarity: 0.9405, Train PCC: 0.9351\n",
+      "Validation Cosine Similarity: 0.9298, Validation PCC: 0.9232\n",
+      "Epoch [25/300], Train Loss: 0.0587, Validation Loss: 0.0704\n",
+      "Train Cosine Similarity: 0.9413, Train PCC: 0.9359\n",
+      "Validation Cosine Similarity: 0.9299, Validation PCC: 0.9234\n",
+      "Epoch [26/300], Train Loss: 0.0586, Validation Loss: 0.0703\n",
+      "Train Cosine Similarity: 0.9414, Train PCC: 0.9361\n",
+      "Validation Cosine Similarity: 0.9299, Validation PCC: 0.9234\n",
+      "Epoch [27/300], Train Loss: 0.0584, Validation Loss: 0.0705\n",
+      "Train Cosine Similarity: 0.9416, Train PCC: 0.9363\n",
+      "Validation Cosine Similarity: 0.9295, Validation PCC: 0.9229\n",
+      "Epoch [28/300], Train Loss: 0.0581, Validation Loss: 0.0713\n",
+      "Train Cosine Similarity: 0.9419, Train PCC: 0.9365\n",
+      "Validation Cosine Similarity: 0.9286, Validation PCC: 0.9221\n",
+      "Epoch [29/300], Train Loss: 0.0576, Validation Loss: 0.0710\n",
+      "Train Cosine Similarity: 0.9424, Train PCC: 0.9371\n",
+      "Validation Cosine Similarity: 0.9288, Validation PCC: 0.9222\n",
+      "Epoch [30/300], Train Loss: 0.0574, Validation Loss: 0.0721\n",
+      "Train Cosine Similarity: 0.9426, Train PCC: 0.9373\n",
+      "Validation Cosine Similarity: 0.9277, Validation PCC: 0.9209\n",
+      "Epoch [31/300], Train Loss: 0.0569, Validation Loss: 0.0709\n",
+      "Train Cosine Similarity: 0.9431, Train PCC: 0.9379\n",
+      "Validation Cosine Similarity: 0.9290, Validation PCC: 0.9224\n",
+      "Epoch [32/300], Train Loss: 0.0566, Validation Loss: 0.0709\n",
+      "Train Cosine Similarity: 0.9433, Train PCC: 0.9381\n",
+      "Validation Cosine Similarity: 0.9289, Validation PCC: 0.9224\n",
+      "Epoch [33/300], Train Loss: 0.0562, Validation Loss: 0.0716\n",
+      "Train Cosine Similarity: 0.9438, Train PCC: 0.9386\n",
+      "Validation Cosine Similarity: 0.9284, Validation PCC: 0.9219\n",
+      "Epoch [34/300], Train Loss: 0.0565, Validation Loss: 0.0727\n",
+      "Train Cosine Similarity: 0.9435, Train PCC: 0.9383\n",
+      "Validation Cosine Similarity: 0.9274, Validation PCC: 0.9206\n",
+      "Epoch [35/300], Train Loss: 0.0557, Validation Loss: 0.0726\n",
+      "Train Cosine Similarity: 0.9443, Train PCC: 0.9392\n",
+      "Validation Cosine Similarity: 0.9276, Validation PCC: 0.9210\n",
+      "Epoch [36/300], Train Loss: 0.0555, Validation Loss: 0.0724\n",
+      "Train Cosine Similarity: 0.9445, Train PCC: 0.9394\n",
+      "Validation Cosine Similarity: 0.9274, Validation PCC: 0.9208\n",
+      "Epoch [37/300], Train Loss: 0.0553, Validation Loss: 0.0725\n",
+      "Train Cosine Similarity: 0.9447, Train PCC: 0.9396\n",
+      "Validation Cosine Similarity: 0.9277, Validation PCC: 0.9211\n",
+      "Epoch [38/300], Train Loss: 0.0545, Validation Loss: 0.0727\n",
+      "Train Cosine Similarity: 0.9455, Train PCC: 0.9404\n",
+      "Validation Cosine Similarity: 0.9272, Validation PCC: 0.9206\n",
+      "Epoch [39/300], Train Loss: 0.0544, Validation Loss: 0.0726\n",
+      "Train Cosine Similarity: 0.9457, Train PCC: 0.9406\n",
+      "Validation Cosine Similarity: 0.9275, Validation PCC: 0.9208\n",
+      "Epoch [40/300], Train Loss: 0.0538, Validation Loss: 0.0736\n",
+      "Train Cosine Similarity: 0.9462, Train PCC: 0.9412\n",
+      "Validation Cosine Similarity: 0.9263, Validation PCC: 0.9195\n",
+      "Epoch [41/300], Train Loss: 0.0533, Validation Loss: 0.0743\n",
+      "Train Cosine Similarity: 0.9466, Train PCC: 0.9417\n",
+      "Validation Cosine Similarity: 0.9259, Validation PCC: 0.9191\n",
+      "Epoch [42/300], Train Loss: 0.0532, Validation Loss: 0.0738\n",
+      "Train Cosine Similarity: 0.9468, Train PCC: 0.9419\n",
+      "Validation Cosine Similarity: 0.9263, Validation PCC: 0.9195\n",
+      "Epoch [43/300], Train Loss: 0.0527, Validation Loss: 0.0744\n",
+      "Train Cosine Similarity: 0.9473, Train PCC: 0.9425\n",
+      "Validation Cosine Similarity: 0.9256, Validation PCC: 0.9188\n",
+      "Epoch [44/300], Train Loss: 0.0528, Validation Loss: 0.0759\n",
+      "Train Cosine Similarity: 0.9472, Train PCC: 0.9423\n",
+      "Validation Cosine Similarity: 0.9243, Validation PCC: 0.9174\n",
+      "Epoch [45/300], Train Loss: 0.0525, Validation Loss: 0.0763\n",
+      "Train Cosine Similarity: 0.9475, Train PCC: 0.9426\n",
+      "Validation Cosine Similarity: 0.9235, Validation PCC: 0.9165\n",
+      "Epoch [46/300], Train Loss: 0.0521, Validation Loss: 0.0769\n",
+      "Train Cosine Similarity: 0.9479, Train PCC: 0.9431\n",
+      "Validation Cosine Similarity: 0.9233, Validation PCC: 0.9162\n",
+      "Epoch [47/300], Train Loss: 0.0524, Validation Loss: 0.0748\n",
+      "Train Cosine Similarity: 0.9477, Train PCC: 0.9428\n",
+      "Validation Cosine Similarity: 0.9251, Validation PCC: 0.9183\n",
+      "Epoch [48/300], Train Loss: 0.0517, Validation Loss: 0.0773\n",
+      "Train Cosine Similarity: 0.9483, Train PCC: 0.9435\n",
+      "Validation Cosine Similarity: 0.9228, Validation PCC: 0.9158\n",
+      "Epoch [49/300], Train Loss: 0.0509, Validation Loss: 0.0744\n",
+      "Train Cosine Similarity: 0.9492, Train PCC: 0.9444\n",
+      "Validation Cosine Similarity: 0.9255, Validation PCC: 0.9187\n",
+      "Epoch [50/300], Train Loss: 0.0503, Validation Loss: 0.0773\n",
+      "Train Cosine Similarity: 0.9497, Train PCC: 0.9450\n",
+      "Validation Cosine Similarity: 0.9229, Validation PCC: 0.9158\n",
+      "Epoch [51/300], Train Loss: 0.0503, Validation Loss: 0.0782\n",
+      "Train Cosine Similarity: 0.9497, Train PCC: 0.9450\n",
+      "Validation Cosine Similarity: 0.9217, Validation PCC: 0.9146\n",
+      "Stop Early\n",
+      "Training complete.\n",
+      "hela 10% test\n",
+      "\tTest: Mean Cosine Similarity: 0.9334\n",
+      "\tTest: Mean Pearson Correlation Coefficient: 0.9272\n",
+      "hela2 test\n",
+      "\tTest: Mean Cosine Similarity: 0.9241\n",
+      "\tTest: Mean Pearson Correlation Coefficient: 0.9169\n"
+     ]
+    }
+   ],
+   "source": [
+    "pre_trained_model7 = BiLSTM(input_size, hidden_size, num_layers, output_size).to(device)\n",
+    "pre_trained_model7.load_state_dict(torch.load(\"./pre_trained_model_parameters_60_80.pth\", map_location=torch.device(device)))\n",
+    "\n",
+    "tb_writer = SummaryWriter(\"./tensorboard_logs/version2/trial1-fine_tuning_#6\")\n",
+    "\n",
+    "# fine tuning dataset\n",
+    "tuning_train_df, tuning_val_test_df = train_test_split(new_hela1_df, test_size=0.3, random_state=12)\n",
+    "tuning_val_df, tuning_test_df = train_test_split(tuning_val_test_df, test_size=0.3, random_state=44)\n",
+    "print(len(tuning_train_df), len(tuning_val_df), len(tuning_test_df))\n",
+    "\n",
+    "tuning_train_dataset = preprocessing.retrieve_dataset(tuning_train_df, max_seq_len, max_intens_len, normalize_intens=True)\n",
+    "tuning_val_dataset = preprocessing.retrieve_dataset(tuning_val_df, max_seq_len, max_intens_len, normalize_intens=True)\n",
+    "tuning_test_dataset = preprocessing.retrieve_dataset(tuning_test_df, max_seq_len, max_intens_len, normalize_intens=True)\n",
+    "tuning_train_dataloader = DataLoader(tuning_train_dataset, batch_size=128, shuffle=True)\n",
+    "tuning_val_dataloader = DataLoader(tuning_val_dataset, batch_size=128, shuffle=True)\n",
+    "tuning_test_dataloader = DataLoader(tuning_test_dataset, batch_size=128, shuffle=True)\n",
+    "\n",
+    "# other test dataset\n",
+    "hela2_dataset = preprocessing.retrieve_dataset(new_hela2_df, max_seq_len, max_intens_len, normalize_intens=True)\n",
+    "hela2_dataloader = DataLoader(hela2_dataset, batch_size=128, shuffle=True)\n",
+    "\n",
+    "epochs = 300\n",
+    "optimizer = optim.Adam(pre_trained_model7.parameters(), lr=0.0005)\n",
+    "tuning_model, tuning_train_res = train_model(\n",
+    "    pre_trained_model7, criterion, optimizer, epochs, tuning_train_dataloader, tuning_val_dataloader, device, tb_writer, 40)\n",
+    "\n",
+    "test_res = test_model(tuning_model, criterion, tuning_test_dataloader, device, tb_writer, \"hela 10% test\")\n",
+    "hela2_res = test_model(tuning_model, criterion, hela2_dataloader, device, tb_writer, \"hela2 test\")\n",
+    "tb_writer.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
